		each outbound scan and was causing mbtask to stop functioning
		after a few days.
		After forking the daemon, the stdin, stdout and stderr are
		reopend to /dev/null.
		Zero the daily status counters finally works again.
		Added experimental code where tossing mail is not started as
		long as there are mailers running, but not longer as 30 mins.
		This should make the whole system less nervous.

	mbfile:
		In the import function several bugfixes for reading files.bbs.
		Fixed upper/lowercase filenames bug with import.

	mbfido:
		Removed all code for charset translation.
		In areamgr/filemgr lists the messages are forced splitted when
		the force limit is reached in the middle of a group listing.
		The nodes statistocs are expanded with flow counters.
		If echomail is accepted in a unsecure area or the unsecure
		commandline option is set, a violation is logged as warning.

	mbsetup:
		Added protection against wrong database sizes depending on
		global settings.
		When moving a message area to area zero mbsetup doesn't crash
		anymore.
		Added new menu item 319, removed menu items 22 and 23.
		Added setup for rules directory.
		Added setup for menu 221. Changed description of menu 103.
		The menu editor is machine endian independant.

	mbsebbs:
		It will now refuse to up/download OLR packets when the system
		bbs id is not set in the global setup.
		When a reply is made on a message in a area which allows
		aliases, the user is asked to use his alias.
		When a reply is made on a message in a newsgroup and your
		systems has a permanent mail domain the email address is used
		as from name.
		Removed timebank and nextuser doors.
		Added editing of user's signature file. New menu item 319.
		If the sysop is exporting a echomail message he will have the
		option to save to his private directory or to the rules
		directory. If saved to the rules directory the message will
		have the filename of the area tag. Normal users can only export