@@ -1,9 +1,12 @@
-/* $Id$ */
-
 #ifndef _TASKSTAT_H
 #define _TASKSTAT_H
 
+/* $Id$ */
+
+
 #define PAUSETIME               3
+#define TOSSWAIT_TIME           30
+
 
 void		status_init(void);	/* Initialize status module	*/
 void		stat_inc_clients(void);	/* Increase connected clients	*/
