@@ -54,6 +54,8 @@ v0.37.01	14-Jan-2003.
 		Added experimental code where tossing mail is not started as
 		long as there are mailers running, but not longer as 30 mins.
 		This should make the whole system less nervous.
+		Modified this code, didn't work, the toss was always started
+		at once.
 
 	mbfile:
 		In the import function several bugfixes for reading files.bbs.
@@ -66,6 +68,11 @@ v0.37.01	14-Jan-2003.
 		The nodes statistocs are expanded with flow counters.
 		If echomail is accepted in a unsecure area or the unsecure
 		commandline option is set, a violation is logged as warning.
+		Removed some debugging tests and log messages.
+
+	mbdiff:
+		If unpacking a diff file fails, a second attempt is done after
+		a sync and one second delay.
 
 	mbsetup:
 		Added protection against wrong database sizes depending on
